# Chess-Bot-ROS2

./: LICENSE  README.md
install/: local_setup.sh  setup.sh
install/chessbot_bringup/lib/chessbot_bringup/: add_collision  goto_goal  pick_and_place
install/chessbot_bringup/share/chessbot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chessbot_bringup/share/chessbot_bringup/cmake/: chessbot_bringupConfig-version.cmake  chessbot_bringupConfig.cmake
install/chessbot_bringup/share/chessbot_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/chessbot_bringup/share/chessbot_bringup/launch/: real.launch.py  simulation.launch.py
install/chessbot_chess/share/chessbot_chess/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chessbot_controller/include/chessbot_controller/: arm_interface.hpp
install/chessbot_controller/include1/chessbot_controller/: visibility_control.h
install/chessbot_controller/lib/chessbot_controller/: move_joint_user.py  slider.py  slider_control
install/chessbot_controller/share/chessbot_controller/: arm_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chessbot_controller/share/chessbot_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  chessbot_controllerConfig-version.cmake  chessbot_controllerConfig.cmake
install/chessbot_controller/share/chessbot_controller/config/: arm_controllers.yaml
install/chessbot_controller/share/chessbot_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/chessbot_controller/share/chessbot_controller/launch/: controller.launch.py  joint_slide.launch.py  joint_slide.py
install/chessbot_description/share/chessbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chessbot_description/share/chessbot_description/cmake/: chessbot_descriptionConfig-version.cmake  chessbot_descriptionConfig.cmake
install/chessbot_description/share/chessbot_description/environment/: ament_prefix_path.dsv  path.dsv
install/chessbot_description/share/chessbot_description/launch/: display.launch.xml  gazebo_sim.launch.py
install/chessbot_description/share/chessbot_description/meshes/: left_finger.STL  right_finger.STL
install/chessbot_description/share/chessbot_description/urdf/: arm_core.urdf.xacro  arm_gazebo.urdf.xacro  arm_inertia.urdf.xacro  arm_ros2_control.urdf.xacro  main.urdf.xacro
install/chessbot_moveit/share/chessbot_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chessbot_moveit/share/chessbot_moveit/cmake/: chessbot_moveitConfig-version.cmake  chessbot_moveitConfig.cmake
install/chessbot_moveit/share/chessbot_moveit/config/: arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml
install/chessbot_moveit/share/chessbot_moveit/environment/: ament_prefix_path.dsv  path.dsv
install/moveit/share/moveit/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/Chess/: IMG_20240826_163606_155.txt  IMG_20240826_163606_887.txt  IMG_20240826_163627_230.txt  IMG_20240826_163629_022.txt  IMG_20240826_163655_014.txt  IMG_20240826_163705_856.txt  IMG_20240826_163719_329.txt  IMG_20240826_163723_444.txt  IMG_20240826_163752_161.txt  IMG_20240826_163755_287.txt  IMG_20240826_163811_423.txt  IMG_20240826_163813_017.txt  IMG_20240826_163847_556.txt  IMG_20240826_163849_398.txt  IMG_20240826_163917_096.txt  IMG_20240826_163919_616.txt  IMG_20240826_163939_316.txt  IMG_20240826_163940_342.txt  IMG_20240826_164033_882.txt  IMG_20240826_164102_941.txt  IMG_20240826_164104_468.txt  IMG_20240826_164148_868.txt  IMG_20240826_164150_185.txt  IMG_20240826_164213_266.txt  IMG_20240826_164214_902.txt  IMG_20240826_164243_713.txt  IMG_20240826_164245_509.txt  IMG_20240826_164319_815.txt  IMG_20240826_164321_204.txt  IMG_20240826_164331_562.txt  IMG_20240826_164419_775.txt  IMG_20240826_164422_225.txt  IMG_20240826_164453_336.txt  IMG_20240826_164454_861.txt  IMG_20240826_164513_517.txt  IMG_20240826_164515_058.txt  IMG_20240826_164525_865.txt  IMG_20240826_164527_011.txt  IMG_20240826_164547_085.txt  IMG_20240826_164548_198.txt  (+61 more)
src/chessbot_bringup/: CMakeLists.txt  package.xml
src/chessbot_bringup/launch/: real.launch.py  simulation.launch.py
src/chessbot_bringup/src/: add_collision_object.cpp  goto_goal.cpp  pick_and_place.cpp
src/chessbot_chess/: package.xml  setup.cfg  setup.py
src/chessbot_controller/: CMakeLists.txt  arm_controller.xml  package.xml
src/chessbot_controller/chessbot_controller/: move_joint_user.py  slider.py
src/chessbot_controller/config/: arm_controllers.yaml
src/chessbot_controller/include/chessbot_controller/: arm_interface.hpp
src/chessbot_controller/launch/: controller.launch.py  joint_slide.launch.py
src/chessbot_controller/src/: arm_interface.cpp  slider.cpp
src/chessbot_description/: CMakeLists.txt
src/chessbot_description/launch/: display.launch.xml  gazebo_sim.launch.py
src/chessbot_description/urdf/: arm_core.urdf.xacro  arm_gazebo.urdf.xacro  arm_inertia.urdf.xacro  arm_ros2_control.urdf.xacro  main.urdf.xacro
src/chessbot_moveit/: CMakeLists.txt  package.xml
src/chessbot_moveit/config/: arm.srdf  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml
src/chessbot_moveit/launch/: moveit.launch.py
src/firmware/firmware/: firmware.ino
src/firmware/test_servos/: test_servos.ino
(+38 files in other folders)
